# GBK

./: GBK_app.py  README.md  pyproject.toml  requirements.txt
kda_backend/: __init__.py  applicability.py  core.py  methods.py  plotting.py  preprocessing.py  schemas.py  streamlit_adapter.py
tests/: test_kda_integration.py
