[project]
name = "gbk-marketing-insights-suite"
version = "0.1.0"
description = "Streamlit frontend for GBK key drivers analysis"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib==3.9.2",
  "numpy==1.26.4",
  "openpyxl==3.1.5",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "scipy==1.13.1",
  "shap==0.46.0",
  "statsmodels==0.14.2",
  "streamlit>=1.32.0",
  "xgboost==2.1.1",
]

[tool.uv]
package = false
